--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Ahmad Shopnil</span> World!</h1>
@@ -30,11 +30,11 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
-        <div class="half-width">
+        <div class="half-width ">
             <h1>Dream Big</h1>
             <h2>Become a Web Developer</h2>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
@@ -43,6 +43,33 @@
             <a class="resume-button" target="_blank" href="#">My Resume</a>
         </div>
     </section>
+    <section class="exprience-area">
+        <h2>Experiences</h2>
+        <div class="flexible-container">
+            <div id="full-stack" class="exprience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't
+                    stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know
+                    the
+                    deployment,
+                    server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="front-end" class="exprience-item">
+                <h2>Front-End Developer</h2>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them.
+                    They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
 </body>
+<footer>
+    <p>All Authority Reserved By @ Abu Shaleh Ahmad</p>
+</footer>
 
 </html>
