--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <section class="top-banner flexible-container">
-        <div class="half-width">
+    <section class="top-banner flexible-container sec-1">
+        <div class="half-width d-1">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Ahmad Shopnil</span> World!</h1>
             <h3>Build Climber and Train Stopper</h3>
@@ -30,7 +30,7 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    <section class="dream-big flexible-container">
+    <section class="dream-big flexible-container sec-2">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -43,9 +43,9 @@
             <a class="resume-button" target="_blank" href="#">My Resume</a>
         </div>
     </section>
-    <section class="exprience-area">
+    <section class="exprience-area sec-3">
         <h2>Experiences</h2>
-        <div class="flexible-container">
+        <div class="flexible-container sec-4">
             <div id="full-stack" class="exprience-item">
                 <h2>Full Stack Developer</h2>
                 <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
